--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,12 @@ body{
     color: black;
 }
 
+h1{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 20px;
+    font-style: italic;
+}
+
 .bg-header{
     background-color: #001632;
 }
