--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,19 @@ body{
     color: black;
 }
 
+li{
+    animation: fadeIn 1s linear;
+}
+
+@keyframes fadeIn {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
 h1{
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 20px;
