--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,6 @@
 body{
     font-family: sans-serif;
-    background-color: aliceblue;
-    color: black;
+    background-color: rgb(70, 70, 70);
 }
 
 li{
